# ucl-rust-lexer

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml  coverage.yml  release.yml
benches/: README.md  lexer_benchmarks.rs  memory_efficiency_benchmarks.rs  parser_benchmarks.rs  ucl_compatibility_benchmarks.rs  zero_copy_benchmarks.rs
examples/: README.md  advanced_features.rs  basic_usage.rs  complete_ucl_syntax.rs  configuration_management.rs  cpp_comments_demo.rs  extensibility_demo.rs  framework_integration.rs  nginx_style_framework_integration.rs  number_parsing.rs  performance_comparison.rs  real_world_configurations.rs  real_world_usage.rs  web_server_config.rs
scripts/: memory_analysis.sh  profile_performance.sh  run_benchmarks.sh
src/: c_libucl_compatibility.rs  deserializer.rs  error.rs  error_tests.rs  lexer.rs  lib.rs  parser.rs
tests/: bare_word_tests.rs  c_libucl_behavior_validation.rs  c_libucl_compatibility.rs  c_libucl_compatibility_report.rs  compatibility_tests.rs  cpp_comment_tests.rs  extensibility_tests.rs  heredoc_tests.rs  implicit_array_tests.rs  integration_tests.rs  libucl_compatibility_tests.rs  nginx_syntax_tests.rs  performance_tests.rs  real_world_ucl_configs.rs  unicode_escape_tests.rs
